<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp"
    android:weightSum="1">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="103dp"
        android:layout_weight="0.85"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="4dp"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/weather_photo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="5dp"

                android:contentDescription="@string/sky" />

            <TextView
                android:id="@+id/tv_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginTop="5sp"
                android:layout_toRightOf="@id/weather_photo"
                android:text="@string/temperature"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5sp"
                android:layout_toRightOf="@id/tv_temperature"
                android:text="@string/humidity"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_maxim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_temperature"
                android:layout_toRightOf="@id/weather_photo"
                android:text="@string/minimum_and_maximum"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_maxim"
                android:layout_marginTop="10sp"
                android:layout_toRightOf="@id/weather_photo"
                android:text="@string/day"
                android:textStyle="bold" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>