<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mangu.personalcityhelper.ui.main.MainActivity">


    <ImageView
        android:id="@+id/id_news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="153dp"
        android:contentDescription="@string/news"
        android:src="@drawable/ic_news"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/id_beach"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewNews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/news"
        android:textStyle="bold|italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/textViewBeach"
        app:layout_constraintTop_toBottomOf="@+id/id_news" />

    <ImageView
        android:id="@+id/id_beach"
        android:layout_width="39dp"
        android:layout_height="32dp"
        android:layout_marginTop="153dp"
        android:contentDescription="@string/beach"
        android:src="@drawable/ic_beach"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewBeach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/beach"
        android:textStyle="bold|italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_beach" />

    <ImageView
        android:id="@+id/id_weather"
        android:layout_width="53dp"
        android:layout_height="26dp"
        android:layout_marginTop="153dp"
        android:contentDescription="@string/weather"
        android:src="@drawable/ic_weather"
        app:layout_constraintLeft_toRightOf="@+id/id_beach"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"

        android:text="@string/weather"
        android:textStyle="bold|italic"
        app:layout_constraintLeft_toRightOf="@+id/textViewBeach"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_weather" />

    <ImageView
        android:id="@+id/id_events"
        android:layout_width="0dp"

        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:contentDescription="@string/calendar"
        android:src="@drawable/ic_calendar"
        app:layout_constraintLeft_toLeftOf="@+id/id_news"
        app:layout_constraintTop_toBottomOf="@+id/textViewNews" />

    <TextView
        android:id="@+id/textViewCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/calendar"

        android:textStyle="bold|italic"
        app:layout_constraintLeft_toLeftOf="@+id/textViewNews"
        app:layout_constraintTop_toBottomOf="@+id/id_events" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/id_transport"
        android:layout_marginTop="41dp"
        android:contentDescription="@string/transport"
        android:src="@drawable/ic_transport"

        />

    <com.mangu.personalcityhelper.ui.common.ErrorView
        android:id="@+id/view_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <Button
        android:id="@+id/btn_change_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/change_language"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
